--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8"><title> Preguntas </title>
-	<link rel='stylesheet' type='text/css' href='/stylesheets/style.css' />
+	<link rel='stylesheet' href='/stylesheets/style.css' />
         <link rel='stylesheet'
 	      type='text/css'
 	      media='only screen and (min-width: 530px) and (min-device-width: 481px)'
-	      hrfet='/stylesheet/wide.css' />
+	      href='/stylesheet/wide.css' />
 	<link rel='stylesheet'
 	      type='text/css'
 	      media='only screen and (max-width: 480px)'
-	      hrfet='/stylesheet/smartphone.css' />
+	      href='/stylesheet/smartphone.css' />
 </head>
 
 <body>
