--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="utf-8"><title> Preguntas </title>
 	<link rel='stylesheet' href='/stylesheets/style.css' />
         <link rel='stylesheet'
 	      type='text/css'
 	      media='only screen and (min-width: 530px) and (min-device-width: 481px)'
-	      href='/stylesheet/wide.css' />
+	      href='/stylesheets/wide.css' />
 	<link rel='stylesheet'
 	      type='text/css'
 	      media='only screen and (max-width: 480px)'
-	      href='/stylesheet/smartphone.css' />
+	      href='/stylesheets/smartphone.css' />
 </head>
 
 <body>
 <div id="page-wrap">
    <header class="main" id="h1">
-	<h2>Quiz: el juego de las preguntas</h2>
+	<h2>Quiz<span>: el juego de las preguntas</span></h2>
    </header>
    
    <nav class="main" id="n1" role="navigation">
@@ -25,13 +25,13 @@
    </nav>
 
    <section class="main" id="s1">
-   <%- body %>
+     <div><%- body %></div>
    </section>
 
    <footer class="main" id="f1">
      <a href="http://es.wikipedia.org/wiki/Quiz">
        ¿Qué es un Quiz? </a>
-     <a href="https://github.com/jcbarreiro/Tarea_Modulo6">
+     <a href="https://github.com/jcbarreiro/tarea_Modulo6">
        proyecto en GitHub </a>
    </footer>
 </div>
