--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"><title>Quiz</title>
-		<link rel='stylesheet' href='/stylesheets/style.css' />
+		<link rel='stylesheet' href='/public/stylesheets/style.css' />
 	</head>
 	<body>
 		<h2>Quiz: el juego de las preguntas</h2>
