--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,7 +30,7 @@
 
    <footer class="main" id="f1">
      <a href="http://es.wikipedia.org/wiki/Quiz">
-       ¿Qué es un Quiz? </a>
+       ¿Qué es un Quiz? </a><br/>
      <a href="https://github.com/jcbarreiro/tarea_Modulo6">
        proyecto en GitHub </a>
    </footer>
