--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,5 +1,4 @@
-<h2>Quiz: el juego de las preguntas</h2>
-
-<p><%= respuesta %></p>
-<a href="/quizes/question"> Intentalo otra vez </a>
-
+<p>
+	<%= respuesta %>
+	<a href="/quizes/<%= quiz.id %>">Volver</a>
+</p>
