--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,9 +1,17 @@
 <table>
 <% var i; for (i=0; i < quizes.length; i++) { %>
-	<tr>
-		<td>
-			<a href="quizes/<%= quizes[i].id %>"> <%= quizes[i].pregunta %></a>
-		</td>
-	</tr>
+  <tr>
+    <td>
+      <a href="quizes/<%= quizes[i].id %>"> <%= quizes[i].pregunta %></a>
+    </td>
+  </tr>
 <% } %>
 </table>
+
+<p>&nbsp
+  <form method="get" action="/quizes">
+    Buscar preguntas:<br>
+    <input type="text" name="search" value="Introduzca palabras..."><Br>
+    <br>
+    <input type="submit" value="Enviar">
+  </form>
