--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,13 +26,22 @@
    </nav>
 
    <section class="main" id="s1">
+	<% if (errors.length) { %>
+      	     <span id='ErrorMsgs'>
+             Corregir errores:<br/>
+             <% for (var i in errors) { %>
+                <span> <%= errors[i].message %> </span><br/>
+             <% } %>
+      	     </span>
+    	<% } %>
+
      <div><%- body %></div>
    </section>
 
    <footer class="main" id="f1">
      <a href="http://es.wikipedia.org/wiki/Quiz">
        ¿Qué es un Quiz? </a><br/>
-     <a href="https://github.com/jcbarreiro/tarea_Modulo6">
+     <a href="https://github.com/jcbarreiro/tarea_Modulo8">
        proyecto en GitHub </a>
    </footer>
 </div>
