--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -25,7 +25,6 @@
 <p>&nbsp
   <form method="get" action="/quizes">
     Buscar preguntas:<br>
-    <input type="text" name="search" value="Introduzca palabras..."><Br>
-    <br>
+    <input type="text" name="search" value="Introduzca palabras...">
     <input type="submit" value="Enviar">
   </form>
