--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -18,7 +18,7 @@
 </select>
 
 <p><a href="/quizes"><button type="button">Cancelar</button></a>
-<input type="submit" value="Salvar">
+<input type="submit"  onClick="lee_select()" value="Salvar">
 
 <script>
 var indice
