--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,9 +1,10 @@
 <table>
   <% var i; for (i=0; i < quizes.length; i++) { %>        
     <tr>
+      <td align="left"><%= quizes[i].tema %></td>
       <td align="left"><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
       <%if(session.user){%>
-        <td align="left"><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].tema %></a></td>
+        
         <td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
         <td>
           <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
