--- a/views/statistics/show.ejs
+++ b/views/statistics/show.ejs
@@ -1,6 +1,6 @@
 <h2>Estadísticas de Quiz</h2>
  
- <ul>
+<ul align="left">
    <li>Preguntas: <%= statistics.quizes %></li>
    <li>Comentarios totales: <%= statistics.comments %></li>
    <li>Media de comentarios por pregunta: <%= statistics.quizes?(statistics.comments / statistics.quizes).toFixed(2):0 %></li>
