--- a/views/statistics/show.ejs
+++ b/views/statistics/show.ejs
@@ -3,6 +3,8 @@
 <ul align="left">
    <li>Preguntas: <%= statistics.quizes %></li>
    <li>Comentarios totales: <%= statistics.comments %></li>
+   <li>Comentarios no publicados: <%= statistics.commentsUnpublished %>
+     (<%= statistics.comments?(statistics.commentsUnpublished * 100 / statistics.comments).toFixed(2)+'%':'100%' %>)</li>
    <li>Media de comentarios por pregunta: <%= statistics.quizes?(statistics.comments / statistics.quizes).toFixed(2):0 %></li>
    <li>Preguntas sin comentarios: <%= statistics.quizes - statistics.commentedQuizes %></li>
    <li>Preguntas con comentarios: <%= statistics.commentedQuizes %></li>
